# goupil

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/goupil-util/: Cargo.toml
crates/goupil-util/src/: base64.rs  lib.rs  oauth2.rs  sha.rs  urlencode.rs
src/: api.rs  commands.rs  credentials.rs  main.rs  oauth2.rs  oauth2_response.html  secrets.rs  terminal.rs
src/commands/: email.rs
src/gmail/: mod.rs
src/util/: mod.rs  sha256.rs  urlencode.rs
