[package]
name = "goupil"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "~0.12", features = ["blocking"]}
# smartstring = "~1.0"
rand = "0.8"
clap = {version = "4.5.21", features = ["derive"]}
tiny_http = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_yml = "0.0.12"
