[package]
name = "goupil"
version = "0.1.0"
edition = "2021"

[dependencies]
goupil-util = {path = "crates/goupil-util"}
reqwest = {version = "~0.12", features = ["blocking", "json"]}
# smartstring = "~1.0"
rand = "0.8"
clap = {version = "4.5.21", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_yml = "0.0.12"
log = "0.4"
simple_logger = "5.0"
thiserror = "2"
num = "0.4"
strum = { version = "0.26", features = ["derive"] }
